[project]
name = "overleaf-mcp"
version = "1.0.0"
description = "MCP server for Overleaf with full CRUD operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Overleaf MCP", email = "noreply@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

[project.scripts]
overleaf-mcp = "overleaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overleaf_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
